--- a/meeting-details.html
+++ b/meeting-details.html
@@ -149,7 +149,20 @@ l'accès égal aux opportunités éducatives.
 renouvelables, couplé à des emplois verts et de nouvelles industries durables.
 </p>
 </div>
-                 
+<br>
+<br>
+<br>
+<div class="row">
+  <div class="col-lg-4">
+    <img src="assets/images/odd4" alt="ODD 4" class="img-fluid rounded-circle">
+  </div>
+  <div class="col-lg-4">
+    <img src="assets/images/odd8" alt="ODD 8" class="img-fluid rounded-circle">
+  </div>
+  <div class="col-lg-4">
+    <img src="assets/images/odd9" alt="ODD 9" class="img-fluid rounded-circle">
+  </div>
+</div>  
             <div class="col-lg-12">
               <div class="main-button-red">
                 <a href="index.html">Retour à la page principale</a>
