--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ https://templatemo.com/tm-569-edu-meeting
       <div class="row">
         <div class="col-lg-8 col-sm-8">
           <div class="left-content">
-            <p>This is an educational <em>HTML CSS</em> template by TemplateMo website.</p>
+            <p> <em>ÉQUITÉ PAS SIMPLE ÉGALITÉ</em></p>
           </div>
         </div>
         <div class="col-lg-4 col-sm-4">
@@ -45,7 +45,7 @@ https://templatemo.com/tm-569-edu-meeting
             <ul>
               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-behance"></i></a></li>
+             
               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
             </ul>
           </div>
@@ -62,7 +62,7 @@ https://templatemo.com/tm-569-edu-meeting
                   <nav class="main-nav">
                       <!-- ***** Logo Start ***** -->
                       <a href="index.html" class="logo">
-                          Edu Meeting
+                          CivicImpact
                       </a>
                       <!-- ***** Logo End ***** -->
                       <!-- ***** Menu Start ***** -->
@@ -102,11 +102,11 @@ https://templatemo.com/tm-569-edu-meeting
             <div class="row">
               <div class="col-lg-12">
                 <div class="caption">
-              <h6>Hello Students</h6>
-              <h2>Welcome to Education</h2>
-              <p>This is an edu meeting HTML CSS template provided by <a rel="nofollow" href="https://templatemo.com/page/1" target="_blank">TemplateMo website</a>. This is a Bootstrap v5.1.3 layout. The video background is taken from Pexels website, a group of young people by <a rel="nofollow" href="https://www.pexels.com/@pressmaster" target="_blank">Pressmaster</a>.</p>
+              <h6>Bienvenue</h6>
+              <h2>Ensemble pour un avenir durable</h2>
+              <p> <a rel="nofollow" href="https://templatemo.com/page/1" target="_blank">CivicImpact </a>vise à faciliter l'engagement citoyen en offrant aux utilisateurs des outils pour participer activement à la société tout en accédant à des opportunités éducatives et professionnelles. En se concentrant sur deux Objectifs de Développement Durable (ODD), l'application encourage une croissance inclusive et durable.</p>
               <div class="main-button-red">
-                  <div class="scroll-to-section"><a href="#contact">Join Us Now!</a></div>
+                  <div class="scroll-to-section"><a href="#contact">En Savoir Plus!</a></div>
               </div>
           </div>
               </div>
@@ -127,8 +127,8 @@ https://templatemo.com/tm-569-edu-meeting
                 <img src="assets/images/service-icon-01.png" alt="">
               </div>
               <div class="down-content">
-                <h4>Best Education</h4>
-                <p>Suspendisse tempor mauris a sem elementum bibendum. Praesent facilisis massa non vestibulum.</p>
+                <h4>Votre Voix , Votre Signalement</h4>
+                <p>" Signalez un problème dans votre gouvernorat et contribuez à améliorer votre communauté "</p>
               </div>
             </div>
             
@@ -702,31 +702,39 @@ https://templatemo.com/tm-569-edu-meeting
               <form id="contact" action="" method="post">
                 <div class="row">
                   <div class="col-lg-12">
-                    <h2>Let's get in touch</h2>
+                    <h2>Signalez un problème par gouvernorat</h2>
                   </div>
                   <div class="col-lg-4">
                     <fieldset>
-                      <input name="name" type="text" id="name" placeholder="YOURNAME...*" required="">
+                      <input name="problem-title" type="text" id="problem-title" placeholder="TITRE DU PROBLÈME..." required="">
                     </fieldset>
                   </div>
                   <div class="col-lg-4">
                     <fieldset>
-                    <input name="email" type="text" id="email" pattern="[^ @]*@[^ @]*" placeholder="YOUR EMAIL..." required="">
-                  </fieldset>
-                  </div>
-                  <div class="col-lg-4">
-                    <fieldset>
-                      <input name="subject" type="text" id="subject" placeholder="SUBJECT...*" required="">
+                      <select name="governorate" id="governorate" required="">
+                        <option value="" disabled selected>Sélectionnez le gouvernorat...</option>
+                        <option value="Tunis">Tunis</option>
+                        <option value="Ariana">Ariana</option>
+                        <option value="Ben Arous">Ben Arous</option>
+                        <option value="Manouba">Manouba</option>
+                        <option value="Sousse">Sousse</option>
+                        <option value="Sfax">Sfax</option>
+                        <option value="Nabeul">Nabeul</option>
+                        <option value="Gabès">Gabès</option>
+                        <option value="Bizerte">Bizerte</option>
+                        <option value="Kairouan">Kairouan</option>
+                        <!-- Ajoutez les autres gouvernorats ici -->
+                      </select>
                     </fieldset>
                   </div>
                   <div class="col-lg-12">
                     <fieldset>
-                      <textarea name="message" type="text" class="form-control" id="message" placeholder="YOUR MESSAGE..." required=""></textarea>
+                      <textarea name="problem-description" class="form-control" id="problem-description" placeholder="DÉCRIVEZ LE PROBLÈME..." required=""></textarea>
                     </fieldset>
                   </div>
                   <div class="col-lg-12">
                     <fieldset>
-                      <button type="submit" id="form-submit" class="button">SEND MESSAGE NOW</button>
+                      <button type="submit" id="form-submit" class="button">ENVOYER LE PROBLÈME</button>
                     </fieldset>
                   </div>
                 </div>
@@ -738,20 +746,24 @@ https://templatemo.com/tm-569-edu-meeting
           <div class="right-info">
             <ul>
               <li>
-                <h6>Phone Number</h6>
-                <span>010-020-0340</span>
+                <h6>Impactomètre</h6>
+                <div class="impact-meter">
+                  <div class="impact-score">
+                    <h2>75</h2> <!-- Score d'impact citoyen -->
+                    <p>Score d'Impact Citoyen</p>
+                  </div>
+                  <div class="impact-progress">
+                    <div class="progress-bar" style="width: 75%;"></div> <!-- Barre de progression -->
+                  </div>
+                </div>
               </li>
               <li>
-                <h6>Email Address</h6>
-                <span>info@meeting.edu</span>
+                <h6>Dernière Action</h6>
+                <span>Participation à un projet éducatif local</span> <!-- Exemple d'une action récente -->
               </li>
               <li>
-                <h6>Street Address</h6>
-                <span>Rio de Janeiro - RJ, 22795-008, Brazil</span>
-              </li>
-              <li>
-                <h6>Website URL</h6>
-                <span>www.meeting.edu</span>
+                <h6>Total d'actions</h6>
+                <span>12 actions effectuées</span> <!-- Nombre total d'actions citoyennes -->
               </li>
             </ul>
           </div>
@@ -759,10 +771,11 @@ https://templatemo.com/tm-569-edu-meeting
       </div>
     </div>
     <div class="footer">
-      <p>Copyright © 2022 Edu Meeting Co., Ltd. All Rights Reserved. 
-          <br>Design: <a href="https://templatemo.com" target="_parent" title="free css templates">TemplateMo</a></p>
+      <p>Copyright © 2022 Edu Meeting Co., Ltd. All Rights Reserved.
+        <br>Design: <a href="https://templatemo.com" target="_parent" title="free css templates">TemplateMo</a></p>
     </div>
   </section>
+  
 
   <!-- Scripts -->
   <!-- Bootstrap core JavaScript -->
