details sur odd

--- a/odd4_details.html
+++ b/odd4_details.html
@@ -119,65 +119,27 @@ https://templatemo.com/tm-569-edu-meeting
                   <a href="meeting-details.html"><img src="assets/images/election" alt=""></a>
                 </div>
                 <div class="down-content">
-                  <h2 class="fw-bold mb-4">Parti de la Justice Sociale (PJS)</h2>
-                  <h4 class="fw-light">Équité , pas simple égalité</h4>
+                  <div class="row">
+                    <div class="text-center col-lg-12"> <!-- Use col-lg-12 to take the full width for centering -->
+                        <h2 class="fw-bold mb-4">Education de Qualité</h2>
+                        <br>
+                        <br>
+                        <div class="d-flex justify-content-center"> <!-- Centering the image -->
+                            <div class="col-lg-4">
+                                <img src="assets/images/odd4" alt="ODD 4" class="img-fluid">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
                   <div class="description"> <p>
-                    <br>
-                    
-                    Le thème principal de la campagne serait <span class="text-danger ">l’égalité réelle</span>, par opposition à l’égalité
-formelle, avec pour objectif de réduire les inégalités sociales, économiques et de
-promouvoir des politiques inclusives.
-
-<br>
-<br>
-<span class="text-danger h6">Économie : </span><br>Priorité à la redistribution des richesses avec des réformes fiscales
-favorisant les plus démunis, nationalisation ou régulation des secteurs
-stratégiques (énergie, transports, santé).
-<br>
-<br>
-<span class="text-danger h6">Travail :</span> <br>Renforcement des droits des travailleurs, augmentation du salaire
-minimum, et protection contre la précarité.
-Protection sociale : Mise en place d’un système de sécurité sociale universel et
-gratuit, accès à des soins de santé de qualité pour tous.
-<br>
-<br>
-<span class="text-danger h6">Éducation :</span> <br>Education publique gratuite pour tous les niveaux, avec un accent sur
-l'accès égal aux opportunités éducatives.
-<br>
-<br>
-<span class="text-danger h6"> Environnement :</span> <br>Économie verte et durable avec un virage vers des énergies
-renouvelables, couplé à des emplois verts et de nouvelles industries durables.
+                   DESCRIPTION ODD 4
 </p>
 </div>
 <br>
 <br>
 <br>
-<div class="row">
-  <div class="col-lg-4">
-    <a href="odd4_details.html"><img src="assets/images/odd4" alt="ODD 4" 
-     class="img-fluid rounded-circle shadow-lg" 
-     style="transition: transform 0.3s ease;" 
-     onmouseover="this.style.transform='scale(1.1)'" 
-     onmouseout="this.style.transform='scale(1)'"></a>
 
-  </div>
-  <div class="col-lg-4">
-    <a href="odd8_details.html"><img src="assets/images/odd8" alt="ODD 8" 
-    class="img-fluid rounded-circle shadow-lg" 
-    style="transition: transform 0.3s ease;" 
-    onmouseover="this.style.transform='scale(1.1)'" 
-    onmouseout="this.style.transform='scale(1)'"></a>
-
-  </div>
-  <div class="col-lg-4">
-    <a href="odd9_details.html"><img src="assets/images/odd9" alt="ODD 9" 
-     class="img-fluid rounded-circle shadow-lg" 
-     style="transition: transform 0.3s ease;" 
-     onmouseover="this.style.transform='scale(1.1)'" 
-     onmouseout="this.style.transform='scale(1)'"></a>
-
-  </div>
-</div>  
             <div class="col-lg-12">
               <div class="main-button-red">
                 <a href="index.html">Retour à la page principale</a>
