odd informations and expandable container

--- a/meeting-details.html
+++ b/meeting-details.html
@@ -20,7 +20,11 @@
     <link rel="stylesheet" href="assets/css/templatemo-edu-meeting.css">
     <link rel="stylesheet" href="assets/css/owl.css">
     <link rel="stylesheet" href="assets/css/lightbox.css">
-<!--
+
+<!-- Bootstrap CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+<!-- Bootstrap JavaScript (necessary for collapse functionality) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
 TemplateMo 569 Edu Meeting
 
@@ -97,8 +101,8 @@ https://templatemo.com/tm-569-edu-meeting
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <h6>Get all details</h6>
-          <h2>Online Teaching and Learning Tools</h2>
+          <h6>Recevoir tous les details</h6>
+          <h2>A PROPOS DE NOUS</h2>
         </div>
       </div>
     </div>
@@ -116,12 +120,12 @@ https://templatemo.com/tm-569-edu-meeting
                     <h6>Année <span>2070</span></h6>
                   </div>
                   
-                  <a href="meeting-details.html"><img src="assets/images/election" alt=""></a>
+                  <img src="assets/images/election" alt="">
                 </div>
                 <div class="down-content">
                   <h2 class="fw-bold mb-4">Parti de la Justice Sociale (PJS)</h2>
-                  <h4 class="fw-light">Équité , pas simple égalité</h4>
-                  <div class="description"> <p>
+                  <h4 class="fw-light fs-4">Équité , pas simple égalité</h4>
+                  <div class="description"> <p class="fs-5">
                     <br>
                     
                     Le thème principal de la campagne serait <span class="text-danger ">l’égalité réelle</span>, par opposition à l’égalité
@@ -130,28 +134,53 @@ promouvoir des politiques inclusives.
 
 <br>
 <br>
-<span class="text-danger h6">Économie : </span><br>Priorité à la redistribution des richesses avec des réformes fiscales
+<span class="text-danger h6 fs-4 ">Économie : </span><br>Priorité à la redistribution des richesses avec des réformes fiscales
 favorisant les plus démunis, nationalisation ou régulation des secteurs
 stratégiques (énergie, transports, santé).
 <br>
 <br>
-<span class="text-danger h6">Travail :</span> <br>Renforcement des droits des travailleurs, augmentation du salaire
+<span class="text-danger h6 fs-4">Travail :</span> <br>Renforcement des droits des travailleurs, augmentation du salaire
 minimum, et protection contre la précarité.
 Protection sociale : Mise en place d’un système de sécurité sociale universel et
 gratuit, accès à des soins de santé de qualité pour tous.
 <br>
 <br>
-<span class="text-danger h6">Éducation :</span> <br>Education publique gratuite pour tous les niveaux, avec un accent sur
+<span class="text-danger h6 fs-4">Éducation :</span> <br>Education publique gratuite pour tous les niveaux, avec un accent sur
 l'accès égal aux opportunités éducatives.
 <br>
 <br>
-<span class="text-danger h6"> Environnement :</span> <br>Économie verte et durable avec un virage vers des énergies
+<span class="text-danger h6 fs-4"> Environnement :</span> <br>Économie verte et durable avec un virage vers des énergies
 renouvelables, couplé à des emplois verts et de nouvelles industries durables.
 </p>
 </div>
+<hr>
+<br>
+<h4 class=" text-danger">Notre Logo : </h4> <br>
+<div class="d-flex justify-content-center">
+  <img src="assets/images/election" alt="Notre logo" class="img-fluid w-25 rounded-circle" data-bs-toggle="collapse" data-bs-target="#expandableContent" style="cursor: pointer; box-shadow: 0 0 10px rgba(255, 0, 0, 0.5); transition: all 0.3s ease;" onmouseover="this.style.boxShadow='0 0 30px rgba(255, 0, 0, 0.5)';" onmouseout="this.style.boxShadow='0 0 10px rgba(255, 0, 0, 0.5)';">
+</div>
+<br>
+<br>
+<div id="expandableContent" class="collapse mt-3 border-3">
+  <div class="card card-body">
+    <h4 class="text-danger fs-4">Description du logo : </h4>
+      <p class="fs-5"><br>
+        <span class="text-danger fs-4">Symbole central : </span>
+        <br> Une main levée tenant un épi de blé. La main levée symbolise la
+        lutte et la solidarité des travailleurs, tandis que l'épi de blé représente la
+        redistribution des richesses et la prospérité collective. <br>
+        <span class="text-danger fs-4">Couleurs :</span> <br> Le rouge, couleur historique du socialisme, symbolise la lutte, le
+        changement et la justice sociale. <br>
+        <span class="text-danger fs-4">Forme :</span> <br> Un cercle autour de la main et de l'épi, pour symboliser l’unité et la
+        cohésion du parti autour de ces valeurs.</p>
+  </div>
+</div>
+<hr>
 <br>
 <br>
 <br>
+<br>
+
 <div class="row">
   <div class="col-lg-4">
     <a href="odd4_details.html"><img src="assets/images/odd4" alt="ODD 4" 
