--- a/odd8_details.html
+++ b/odd8_details.html
@@ -121,7 +121,7 @@ https://templatemo.com/tm-569-edu-meeting
                 <div class="down-content">
                   <div class="row">
                     <div class="text-center col-lg-12"> <!-- Use col-lg-12 to take the full width for centering -->
-                        <h2 class="fw-bold mb-4">Education de Qualité</h2>
+                        <h2 class="fw-bold mb-4">Travail décent et croissance économique</h2>
                         <br>
                         <br>
                         <div class="d-flex justify-content-center"> <!-- Centering the image -->
@@ -131,9 +131,18 @@ https://templatemo.com/tm-569-edu-meeting
                         </div>
                     </div>
                 </div>
+                <br>
+                <br>
+                <br>
                 
-                  <div class="description"> <p>
-                   DESCRIPTION ODD 8
+                  <div class="description"> <p class="fs-6">
+                    <span class="text-danger"> L’Objectif de Développement Durable numéro 8 </span> vise à encourager une <span class="text-danger"> croissance économique </span>qui soit à la fois durable et inclusive, tout en favorisant le plein emploi et des conditions de travail décentes pour tous. <br>
+                     Cela inclut la nécessité d'augmenter la productivité et de promouvoir des politiques qui soutiennent l'entrepreneuriat et l'innovation.<br>
+                     L'ODD 8 met également l'accent sur la création d'emplois de qualité, en garantissant des salaires équitables et la sécurité au travail, afin de réduire le chômage, en particulier parmi les jeunes et les groupes vulnérables. <br>
+                      De plus, cet objectif <span class="text-danger">souligne l'importance de lutter contre le travail forcé, le travail des enfants et la discrimination au travail</span>. <br>
+                      En favorisant un environnement économique dynamique et inclusif. <br><br> <br>
+
+                    <span class="text-danger fw-bold"> l’ODD 8 cherche à créer un avenir où chacun peut bénéficier des fruits de la croissance économique et contribuer au développement durable. </span>
 </p>
 </div>
 <br>
@@ -142,7 +151,7 @@ https://templatemo.com/tm-569-edu-meeting
 
             <div class="col-lg-12">
               <div class="main-button-red">
-                <a href="index.html">Retour à la page principale</a>
+                <a href="meeting-details.html">Retour à la page principale</a>
               </div>
             </div>
           </div>
