--- a/odd4_details.html
+++ b/odd4_details.html
@@ -131,9 +131,16 @@ https://templatemo.com/tm-569-edu-meeting
                         </div>
                     </div>
                 </div>
-                
-                  <div class="description"> <p>
-                   DESCRIPTION ODD 4
+                <br> 
+                <br>
+                <br>
+                  <div class="description"> <p class="fs-6">
+                    <span class="text-danger"> L’Objectif de Développement Durable numéro 4 </span> vise à garantir une éducation inclusive et <span class="text-danger">équitable</span> de qualité, ainsi qu’à promouvoir des opportunités d'apprentissage tout au long de la vie pour tous.<br>
+                     Cela signifie que chaque enfant, jeune ou adulte, doit avoir la possibilité d'acquérir les compétences et connaissances nécessaires pour s'épanouir et contribuer positivement à la société. <br>
+                      L'accès à une éducation de qualité est essentiel pour <span class="text-danger">réduire les inégalités sociales et économiques</span>. <br>
+                    Cet ODD se concentre également sur <span class="text-danger">l'amélioration des infrastructures scolaires</span>, la formation des enseignants, et l'accès à une éducation gratuite et de qualité pour les filles et les garçons, notamment dans les régions les plus défavorisées du monde.<br>
+                    <br><br><br>
+                    <span class="text-danger fw-bold">L'objectif est d'atteindre l'égalité des chances et d'outiller chaque individu pour faire face aux défis d'un monde en constante évolution.</span>
 </p>
 </div>
 <br>
@@ -142,7 +149,7 @@ https://templatemo.com/tm-569-edu-meeting
 
             <div class="col-lg-12">
               <div class="main-button-red">
-                <a href="index.html">Retour à la page principale</a>
+                <a href="meeting-details.html">Retour à la page principale</a>
               </div>
             </div>
           </div>
