--- a/odd9_details.html
+++ b/odd9_details.html
@@ -121,7 +121,7 @@ https://templatemo.com/tm-569-edu-meeting
                 <div class="down-content">
                   <div class="row">
                     <div class="text-center col-lg-12"> <!-- Use col-lg-12 to take the full width for centering -->
-                        <h2 class="fw-bold mb-4">Education de Qualité</h2>
+                        <h2 class="fw-bold mb-4">Industrie, Innovation et infrastructure</h2>
                         <br>
                         <br>
                         <div class="d-flex justify-content-center"> <!-- Centering the image -->
@@ -131,9 +131,17 @@ https://templatemo.com/tm-569-edu-meeting
                         </div>
                     </div>
                 </div>
-                
-                  <div class="description"> <p>
-                   DESCRIPTION ODD 9
+                <br>
+                <br>
+                <br>
+                  <div class="description"> <p class="fs-6">
+                    <span class="text-danger"> L’Objectif de Développement Durable numéro 9 </span> se concentre sur la nécessité de <span class="text-danger"> construire des infrastructures résilientes et durables</span>, tout en soutenant une industrialisation inclusive et en promouvant <span class="text-danger">l'innovation</span> . <br>
+                     Cet ODD reconnaît l'importance des infrastructures pour le développement économique et social, en soulignant que des réseaux de transport efficaces, des systèmes énergétiques durables et un accès à Internet peuvent transformer les sociétés. <br>
+                     En encourageant des pratiques industrielles qui respectent l'environnement, l’ODD 9 cherche à  <span class="text-danger">réduire l'impact environnemental tout en stimulant la croissance économique</span>.  <br>
+                     De plus, cet objectif promeut la recherche et le développement, favorisant l'innovation technologique et scientifique comme moteur de progrès.<br>
+                      En soutenant des infrastructures résilientes et en encourageant l'innovation. <br> <br> <br>
+
+                      <span class="text-danger fw-bold"> l’ODD 9 vise à renforcer la compétitivité économique tout en assurant une utilisation responsable des ressources naturelles. </span>
 </p>
 </div>
 <br>
@@ -142,7 +150,7 @@ https://templatemo.com/tm-569-edu-meeting
 
             <div class="col-lg-12">
               <div class="main-button-red">
-                <a href="index.html">Retour à la page principale</a>
+                <a href="meeting-details.html">Retour à la page principale</a>
               </div>
             </div>
           </div>
