--- a/index.html
+++ b/index.html
@@ -69,16 +69,16 @@ https://templatemo.com/tm-569-edu-meeting
                       <ul class="nav">
                           <li class="scroll-to-section"><a href="#top" class="active">Acceuil</a></li>
                           <li><a href="meeting-details.html">A Propos</a></li>
-                          <li class="scroll-to-section"><a href="#apply">Apply Now</a></li>
                           <li class="has-sub">
-                              <a href="javascript:void(0)">Pages</a>
+                              <a href="javascript:void(0)">Services</a>
                               <ul class="sub-menu">
-                                  <li><a href="meetings.html">Upcoming Meetings</a></li>
-                                  <li><a href="meeting-details.html">Meeting Details</a></li>
+                                  <li><a href="meetings.html">Cours</a></li>
+                                  <li><a href="meeting-details.html">Formations</a></li>
+                                  <li><a href="meeting-details.html">Réclamation</a></li>
                               </ul>
                           </li>
-                          <li class="scroll-to-section"><a href="#courses">Courses</a></li> 
-                          <li class="scroll-to-section"><a href="#contact">Contact Us</a></li> 
+                         
+                          <li class="scroll-to-section"><a href="#contact">Contactez-Nous</a></li> 
                       </ul>        
                       <a class='menu-trigger'>
                           <span>Menu</span>
@@ -687,6 +687,77 @@ https://templatemo.com/tm-569-edu-meeting
       </div>
     </div>
   </section>
+
+  <section class="contact-us-1" id="contact1">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-9 align-self-center">
+          <div class="row">
+            <div class="col-lg-12">
+              <form id="contact1" action="" method="post">
+                <div class="row">
+                  <div class="col-lg-12">
+                    <h2>Entrons en contact</h2>
+                  </div>
+                  <div class="col-lg-4">
+                    <fieldset>
+                      <input name="name" type="text" id="name" placeholder="VOTRE NOM...*" required="">
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-4">
+                    <fieldset>
+                      <input name="email" type="text" id="email" pattern="[^ @]*@[^ @]*" placeholder="VOTRE EMAIL..." required="">
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-4">
+                    <fieldset>
+                      <input name="subject" type="text" id="subject" placeholder="SUJET...*" required="">
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-12">
+                    <fieldset>
+                      <textarea name="message" type="text" class="form-control" id="message" placeholder="VOTRE MESSAGE..." required=""></textarea>
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-12">
+                    <fieldset>
+                      <button type="submit" id="form-submit" class="button">ENVOYER MESSAGE MAINTENANT</button>
+                    </fieldset>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <div class="right-info">
+            <ul>
+              <li>
+                <h6>Téléphone</h6>
+                <span>71 250 877</span>
+              </li>
+              <li>
+                <h6>Email</h6>
+                <span>PJS@pjs.com</span>
+              </li>
+              <li>
+                <h6>Adresse</h6>
+                <span>Tunis, Tunisie</span>
+              </li>
+              <li>
+                <h6>URL</h6>
+                <span>www.PJS.tn</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <p>Copyright © 2022 Parti de la Justice Sociale. Tous droits réservés.</p>
+    </div>
+  </section>
+  
 
   
 
